ready for check